--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<pp>(she/her/hers)</pp>
 									<p>Graduate Student <br> UCLA Division of Astronomy & Astrophysics</p>
 								</header>
-								<a href="files/Lam_CV_09112023.pdf" class="jumplink pic">
+								<a href="https://drive.google.com/file/d/1WH6b6M5TEFd_Axs8ab53lfYSfuba_W2_/view?usp=sharing" class="jumplink pic">
 									<span class="arrow icon-ai solid ai-cv"></span><span>View my CV</span></span>
 									<img src="images/natPicnic_square.jpeg" alt="" />
 								</a>
