--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 											
 											<span class="tab-content gallery">
 												<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-													<figure class="cc-effect"><img src="files/agn-outflow-preview.png" alt="Image"/>
+													<figure class="cc-effect"><img src="files/agn-outflow-preview.jpeg" alt="Image"/>
 														<figcaption>
 															<h4><br></h4>
 															<i class="icon solid fa-file fa-3x"></i>
@@ -161,7 +161,7 @@
 										<div class="row">
 											<div class="tab-content gallery mt-5">
 												<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-													<figure class="cc-effect"><img src="files/hydrogel-preview.jpg" alt="Image"/>
+													<figure class="cc-effect"><img src="files/hydrogel-preview.jpeg" alt="Image"/>
 														<figcaption>
 															<h4><br></h4>
 															<i class="icon solid fa-file fa-3x"></i>
