updated year, current research and outreach

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h2 class='major'>About Me</h2>
 							</header>
 							<p>
-								My name is Natalie Lam and I am a first year graduate student in the Astronomy & Astrophysics Ph.D. program at UCLA. 
+								My name is Natalie Lam and I am a second year graduate student in the Astronomy & Astrophysics Ph.D. program at UCLA. 
 								As a recipient of the Eugene V. Cota-Robles Fellowship, I am driven by a passion for astronomy research, science outreach to underrepresented minority (URM) communities, and advocacy for URM and women in STEM. 
 							</p>
 							<p>
@@ -72,7 +72,7 @@
 							<!-- At UCLA, I am working with Prof. Alice Shapley to asdfasdfasfasdfasdf -->
 							<p>
 								Beyond my academic pursuits, I am an avid choral singer and artist. 
-								I have sung in the La Jolla Symphony and Chorus and toured as part of the Hong Kong Children's Choir. 
+								I am currently a soprano in the UCLA Chorale. Previously, I have sung in the La Jolla Symphony and Chorus and toured as part of the Hong Kong Children's Choir. 
 								Outside of school and work, I enjoy oil painting and arts & crafts.  
 							</p>
 
@@ -94,21 +94,22 @@
 									luctus elit eget interdum.
 								</p> -->
 
-								<!-- <section>
+								<section>
 									<header>
 										<h2 class='major'>Current Projects</h2>
 									</header>
 									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="col-8 col-6-medium col-12-small">
-											<p>Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-												Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-												luctus elit eget interdum.</p>
+										<div class="row">
+											<h3>Galactic Outflows at High-redshift</h3>
+											<p> I am currently working with Prof. Alice Shapley on studying the properties of galactic outflows at high-redshift. 
+												We are using the OH-Suppressing Infra-Red Imaging Spectrograph (OSIRIS) integral field spectrograph (IFS) 
+												at the Keck I Telescope in Hawaii to observe the rest-frame optical emission lines of galaxies at z~2-3. 
+												Our goal is to understand the spatial distribution of galactic outflow properties in conjunction with spectroscopic data
+												taken with the Low Resolution Imaging Spectrograph (LRIS) and Multi-Object Spectrograph for Infrared Exploration (MOSFIRE).
+											</p>
 										</div>
 									</div>
-								</section> -->
+								</section>
 
 								<section>
 									<header>
@@ -182,11 +183,12 @@
 						---------- -->
 						<article id="outreach" class="panel">
 							<header>
-								<h2 class='major'>Outreach, EDI & Leadership</h2>
+								<h1>Outreach, EDI & Leadership</h1>
 								<!-- <p>Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
 									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
 									luctus elit eget interdum.</p> -->
 							</header>
+
 							<section>
 								<header>
 									<h2 class='major'>Current Involvement</h2>
@@ -199,12 +201,16 @@
 										I also work with the Planetarium Coordinators on planetarium showings.
 								</p>
 								</div>
-								<!-- <div class="row">
-									<h3>Exploring Your Universe</h3>
-									<p> Exploring Your Universe is the largest science fair at UCLA. 
-										As Event Coordinator, I work to ensure smooth operations, security, and crowd-flow during the event. 
-										I also work with the Planetarium Coordinators on planetarium showings.</p>
-								</div> -->
+
+								<div class="row">
+									<h3>Astronomy Live! Summer Observing Workshop</h3>
+									<p> <a href="https://astro.ucla.edu/summer-observing-workshop.html#:~:text=About%20the%20Workshop,pursuing%20a%20career%20in%20science." target="_blank">Astronomy Live! Summer Observing Workshop</a>
+										 is a 9-week program that introduces high school students to scientific research through the lens 
+										 of observational astronomy. The program is designed to provide students with a hands-on experience
+										 using telescopes and data analysis tools to conduct their own research projects. The workshop is led by 
+										 UCLA graduate students earning their Ph.D.’s in Astronomy.
+									</p>
+								</div>
 							</section>
 
 							<section>
