updated year, grfp, research, outreach

--- a/index.html
+++ b/index.html
@@ -63,16 +63,17 @@
 								<h2 class='major'>About Me</h2>
 							</header>
 							<p>
-								My name is Natalie Lam and I am a second year graduate student in the Astronomy & Astrophysics Ph.D. program at UCLA. 
-								As a recipient of the Eugene V. Cota-Robles Fellowship, I am driven by a passion for astronomy research, science outreach to underrepresented minority (URM) communities, and advocacy for URM and women in STEM. 
+								My name is Natalie Lam and I am a third-year Ph.D. student in the Astronomy & Astrophysics program at UCLA. 
+								I am honored to be a recipient of both the NSF Graduate Research Fellowship (GRFP) and the Eugene V. Cota-Robles Fellowship. 
+								I am driven by a passion for astronomy research, science outreach to underrepresented minority (URM) communities, and advocacy for URM and women in STEM.
 							</p>
 							<p>
-								I'm primarily interested in using spectroscopic observational data to study the gaseous environments in and around galaxies. 
+								I'm primarily interested in using spectroscopic observational data to study the gaseous environments in and around high-redshift galaxies. 
 							</p>
 							<!-- At UCLA, I am working with Prof. Alice Shapley to asdfasdfasfasdfasdf -->
 							<p>
 								Beyond my academic pursuits, I am an avid choral singer and artist. 
-								I am currently a soprano in the UCLA Chorale. Previously, I have sung in the La Jolla Symphony and Chorus and toured as part of the Hong Kong Children's Choir. 
+								I am currently a soprano in the UCLA Chorale and Chamber Singers. Previously, I have sung in the La Jolla Symphony and Chorus and toured as part of the Hong Kong Children's Choir. 
 								Outside of school and work, I enjoy oil painting and arts & crafts.  
 							</p>
 
@@ -99,16 +100,42 @@
 										<h2 class='major'>Current Projects</h2>
 									</header>
 									<div class="row">
-										<div class="row">
-											<h3>Galactic Outflows at High-redshift</h3>
-											<p> I am currently working with Prof. Alice Shapley on studying the properties of galactic outflows at high-redshift. 
-												We are using the OH-Suppressing Infra-Red Imaging Spectrograph (OSIRIS) integral field spectrograph (IFS) 
-												at the Keck I Telescope in Hawaii to observe the rest-frame optical emission lines of galaxies at z~2-3. 
-												Our goal is to understand the spatial distribution of galactic outflow properties in conjunction with spectroscopic data
-												taken with the Low Resolution Imaging Spectrograph (LRIS) and Multi-Object Spectrograph for Infrared Exploration (MOSFIRE).
-											</p>
-										</div>
+										<h3>Properties and kinematics of the ISM at Cosmic Noon</h3>
+										<p> I am currently working with Prof. Alice Shapley on studying the properties of the interstellar medium (ISM) at cosmic noon (z~2). 
+											We use the OH-Suppressing Infra-Red Imaging Spectrograph (OSIRIS) integral field spectrograph (IFS) 
+											at the Keck I Telescope in Hawaii to observe the rest-frame optical emission lines of galaxies at z~2. 
+											Our goal is to understand the feedback processes driving galaxy evolution by analyzing the spatial variations of ionization and metallicity. 
+											We also aim to combine these observations with spectroscopic data taken with the Low Resolution Imaging Spectrograph (LRIS) to study the kinematics of the ISM.
+										</p>
 									</div>
+									<h6>Ionization properties and metallicity gradients: </h6>
+									<div class="row centered">
+										<span class="tab-content gallery">
+											<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+												<figure class="cc-effect"><img src="files/mosdef-3d_lineratios.png" alt="Image"/>
+													<figcaption>
+														<h4><br></h4>
+														<i class="icon solid fa-file fa-3x"></i>
+														<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250622547L/abstract" target="_blank"></a>
+													</figcaption>
+												</figure>
+											</div>
+										</span>
+									</div>
+									<h6>Kinematics: (in prep)</h6>
+									<!-- <div class="row centered">
+										<span class="tab-content gallery">
+											<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+												<figure class="cc-effect"><img src="files/mosdef-3d_lineratios.png" alt="Image"/>
+													<figcaption>
+														<h4><br></h4>
+														<i class="icon solid fa-file fa-3x"></i>
+														<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250622547L/abstract" target="_blank"></a>
+													</figcaption>
+												</figure>
+											</div>
+										</span>
+									</div> -->
 								</section>
 
 								<section>
@@ -196,8 +223,9 @@
 							
 								<div class="row">
 									<h3>Exploring Your Universe</h3>
-									<p> <a href="https://exploringyouruniverse.ucla.edu/" target="_blank">Exploring Your Universe</a> is the largest science fair at UCLA. 
-										As Event Coordinator, I work to ensure smooth operations, security, and crowd-flow during the event. 
+									<p> <a href="https://exploringyouruniverse.ucla.edu/" target="_blank">Exploring Your Universe</a> is the largest science fair at UCLA, 
+										bringing in nearly 10000 attendees from the greater Los Angeles area each year. 
+										As the Event Coordinator, I work with the UCLA Events Office to ensure that science booth presenters, volunteers, and attendees have a positive experience.
 										I also work with the Planetarium Coordinators on planetarium showings.
 								</p>
 								</div>
@@ -276,6 +304,13 @@
 								</header>
 								<div class="row">
 									<h3>Ph.D. in Astronomy & Astrophysics (2023-present)</h3>
+									<h6 style="margin-top: -1em;">University of California Los Angeles</h6>
+									<!-- <p>Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
+										Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+										luctus elit eget interdum.</p> -->
+								</div> <br>
+								<div class="row">
+									<h3>M.S. in Astronomy & Astrophysics (2023-2025)</h3>
 									<h6 style="margin-top: -1em;">University of California Los Angeles</h6>
 									<!-- <p>Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
 										Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
