fixed icon wrapping, improved front page card, added cards to research links

--- a/index.html
+++ b/index.html
@@ -108,20 +108,26 @@
 											We also aim to combine these observations with spectroscopic data taken with the Low Resolution Imaging Spectrograph (LRIS) to study the kinematics of the ISM.
 										</p>
 									</div>
-									<h6>Ionization properties and metallicity gradients: </h6>
-									<div class="row centered">
-										<span class="tab-content gallery">
-											<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-												<figure class="cc-effect"><img src="files/mosdef-3d_lineratios.png" alt="Image"/>
-													<figcaption>
-														<h4><br></h4>
-														<i class="icon solid fa-file fa-3x"></i>
-														<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250622547L/abstract" target="_blank"></a>
-													</figcaption>
-												</figure>
-											</div>
-										</span>
+
+									<div class="research-container">
+										<div class="research-text">
+											<h6>Ionization properties and metallicity gradients:</h6>
+										</div>
+										<div class="research-image">
+											<span class="tab-content gallery">
+												<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+													<figure class="cc-effect"><img src="files/mosdef-3d_lineratios.png" alt="Image"/>
+														<figcaption>
+															<h4><br></h4>
+															<i class="icon solid fa-file fa-3x"></i>
+															<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250622547L/abstract" target="_blank"></a>
+														</figcaption>
+													</figure>
+												</div>
+											</span>
+										</div>
 									</div>
+
 									<h6>Kinematics: (in prep)</h6>
 									<!-- <div class="row centered">
 										<span class="tab-content gallery">
@@ -155,19 +161,24 @@
 												kinematic component in the warm ionized phase of the AGN-driven outflow in F05189-2524.
 											</p>
 										</div>
-										<h6>Read my thesis:</h6>
-										<div class="row centered">
-											<span class="tab-content gallery">
-												<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-													<figure class="cc-effect"><img src="files/agn-outflow-preview.jpeg" alt="Image"/>
-														<figcaption>
-															<h4><br></h4>
-															<i class="icon solid fa-file fa-3x"></i>
-															<a href="https://drive.google.com/file/d/1dQmd0fF0nRIiZWUvk_-VF1XvMIOFnfSO/view?usp=sharing" target="_blank"></a>
-														</figcaption>
-													</figure>
-												</div>
-											</span>
+
+										<div class="research-container">
+											<div class="research-text">
+												<h6>Read my thesis:</h6>
+											</div>
+											<div class="research-image">
+												<span class="tab-content gallery">
+													<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+														<figure class="cc-effect"><img src="files/agn-outflow-preview.jpeg" alt="Image"/>
+															<figcaption>
+																<h4><br></h4>
+																<i class="icon solid fa-file fa-3x"></i>
+																<a href="https://drive.google.com/file/d/1dQmd0fF0nRIiZWUvk_-VF1XvMIOFnfSO/view?usp=sharing" target="_blank"></a>
+															</figcaption>
+														</figure>
+													</div>
+												</span>
+											</div>
 										</div>
 
 									<div class="row">
@@ -182,8 +193,12 @@
 											My experimental setup serves as the prototype for a demonstration in the optics physics course that Professor Frañó teaches.
 										</p>
 									</div>
-										<h6>Check out my poster:</h6>
-										<div class="row">
+
+									<div class="research-container">
+										<div class="research-text">
+											<h6>Check out my poster:</h6>
+										</div>
+										<div class="research-image">
 											<div class="tab-content gallery mt-5">
 												<div class="cc-porfolio-image img-raised img.centered" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 													<figure class="cc-effect"><img src="files/hydrogel-preview.jpeg" alt="Image"/>
@@ -196,6 +211,7 @@
 												</div>
 											</div>
 										</div>
+									</div>
 									</section>
 
 									<!-- add SpeX? -->
